Mise à jour du portfolio

--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
   </div>
 </div>
 <h3>A propos de moi</h3>
-<p> Anciennement responsable de magasin, j'ai effectué un <span>bilan de compétences </span>dans le cadre de ma reconversion professionnelle. Adapté à mon profil, le Développement Web est apparut pour moi comme une évidence.<br> De ce fait, j'ai effectué une préparation de 40h avec le centre de formation <span> Le Reacteur </span> afin de me conforter dans cette idée et d'apprendre ainsi les premières bases du développement informatique.<br>
-  Je souhaite désormais effectuer une formation de Développeur Web et Mobile en <span>alternance</span>. <br>Celle-ci débute par un <span>Bootcamp de 10 semaines</span> afin d'avoir de bonnes bases pour intégrer l'entreprise dans les meilleures conditions.
-  </p>
+<p>Anciennement responsable de magasin, j’ai décidé d’entreprendre une <span>reconversion professionnelle</span> vers le <span>développement web et web mobile</span>, un domaine qui correspond parfaitement à mon intérêt pour les technologies et les défis créatifs.</p>
+  
+<p>Avant de me lancer dans cette reconversion, j’ai effectué un <span>bilan de compétences</span> pour m’assurer que cette voie était la plus adaptée à mes aspirations professionnelles. Ce processus a confirmé mon intérêt pour le domaine du développement et a renforcé ma détermination à changer de carrière.</p>
+
+<p>Actuellement, je suis une <span>formation</span> diplômante en e-learning avec Le Réacteur, où j’apprends les bases nécessaires pour devenir développeur web. Dans cette optique, je cherche activement une <span>alternance</span> qui débutera en <span>février 2025</span>, débutant par un bootcamp intensif de 10 semaines, toujours avec Le Réacteur. Mon objectif est d’intégrer une entreprise où je pourrai mettre en pratique mes compétences et continuer à évoluer dans un environnement stimulant.</p>
+
+<p>Motivée, curieuse et déterminée, je suis prête à m’investir pleinement pour relever les défis techniques et collaboratifs de ce métier.</p>
 </section>
 
 <section id="education">
