--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>Avant de me lancer dans cette reconversion, j’ai effectué un <span>bilan de compétences</span> pour m’assurer que cette voie était la plus adaptée à mes aspirations professionnelles. Ce processus a confirmé mon intérêt pour le domaine du développement et a renforcé ma détermination à changer de carrière.</p>
 
 <p>Actuellement, je suis une <span>formation</span> diplômante en e-learning avec Le Réacteur, où j’apprends les bases nécessaires pour devenir développeur web. Dans cette optique, je cherche activement une <span>alternance</span> qui débutera en <span>février 2025</span>, débutant par un bootcamp intensif de 10 semaines, toujours avec Le Réacteur. Mon objectif est d’intégrer une entreprise où je pourrai mettre en pratique mes compétences et continuer à évoluer dans un environnement stimulant.</p>
-
+<p>En parallèle, j'ai lancé un <span>projet personnel</span> : un site interactif sur l'astronomie. Ce projet me permet d'appliquer mes premières compétences en développement web tout en combinant ma passion pour l'astronomie. J'y intègre des fonctionnalités comme un calendrier des événements astronomiques, un système de météo et des articles sur les missions spatiales à venir. Découvrez le projet : <a href="https://caroline-lte.github.io/quiz-astronomie/" target="_blank">Quiz Astronomie</a>.</p>
 <p>Motivée, curieuse et déterminée, je suis prête à m’investir pleinement pour relever les défis techniques et collaboratifs de ce métier.</p>
 </section>
 
@@ -120,7 +120,20 @@
       </div>
         </div>
 
-
+        <div class="projects-container">
+          <img src="img/appolo.jpg" alt="Astronomy Quiz"/>
+          <div>
+            <h3>Site d'Astronomie</h3>
+            <h4>Projet personnel</h4>
+            <ul>
+              <li>Création de quiz sur l'astronomie</li>
+              <li>Choix de questions sur différents niveaux de difficulté</li>
+              <li>Amélioration continue du projet avec l'ajout de nouvelles fonctionnalités</li>
+            </ul>
+            <p class="project-link">Découvrez le projet : <a href="https://caroline-lte.github.io/quiz-astronomie/" target="_blank">Ma page</a></p>
+          </div>
+        </div>
+        
 
 
 <section id="contact">
