--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 <p>Avant de me lancer dans cette reconversion, j’ai effectué un <span>bilan de compétences</span> pour m’assurer que cette voie était la plus adaptée à mes aspirations professionnelles. Ce processus a confirmé mon intérêt pour le domaine du développement et a renforcé ma détermination à changer de carrière.</p>
 
 <p>Actuellement, je suis une <span>formation</span> diplômante en e-learning avec Le Réacteur, où j’apprends les bases nécessaires pour devenir développeur web. Dans cette optique, je cherche activement une <span>alternance</span> qui débutera en <span>février 2025</span>, débutant par un bootcamp intensif de 10 semaines, toujours avec Le Réacteur. Mon objectif est d’intégrer une entreprise où je pourrai mettre en pratique mes compétences et continuer à évoluer dans un environnement stimulant.</p>
-<p>En parallèle, j'ai lancé un <span>projet personnel</span> : un site interactif sur l'astronomie. Ce projet me permet d'appliquer mes premières compétences en développement web tout en combinant ma passion pour l'astronomie. J'y intègre des fonctionnalités comme un calendrier des événements astronomiques, un système de météo et des articles sur les missions spatiales à venir. Découvrez le projet : <a href="https://caroline-lte.github.io/ma-page-astronomie/" target="_blank">Quiz Astronomie</a>.</p>
+<p>En parallèle, j'ai lancé un <span>projet personnel</span> : un site interactif sur l'astronomie. Ce projet me permet d'appliquer mes premières compétences en développement web tout en combinant ma passion pour l'astronomie. J'y intègre des fonctionnalités comme un calendrier des événements astronomiques, un système de météo et des articles sur les missions spatiales à venir. <br>Découvrez le projet : <a href="https://caroline-lte.github.io/ma-page-astronomie/" target="_blank">Quiz Astronomie</a>.</p>
+<p>J'ai créé une réplique simplifiée du site EasyJet en utilisant HTML et CSS, dans le cadre d'un projet visant à approfondir mes compétences en intégration web. Ce projet m'a permis de mettre en pratique les techniques de structuration et de mise en page apprises durant ma formation. <br>Découvrez le projet : <a href="https://caroline-lte.github.io/EasyJet/" target="_blank">Page EasyJet</a></p>
 <p>Motivée, curieuse et déterminée, je suis prête à m’investir pleinement pour relever les défis techniques et collaboratifs de ce métier.</p>
 </section>
 
@@ -61,6 +62,33 @@
 
 <section id="projects">
   <h2>Projets</h2>
+  <div class="projects-container">
+    <img src="img/appolo.jpg" alt="Astronomy Quiz"/>
+    <div>
+      <h3>Site d'Astronomie</h3>
+      <h4>Projet personnel</h4>
+      <ul>
+        <li>Création de quiz sur l'astronomie</li>
+        <li>Choix de questions sur différents niveaux de difficulté</li>
+        <li>Amélioration continue du projet avec l'ajout de nouvelles fonctionnalités</li>
+      </ul>
+      <p class="project-link">Découvrez le projet : <a href="https://caroline-lte.github.io/ma-page-astronomie/" target="_blank">Ma page</a></p>
+    </div>
+  </div>
+  
+  <div class="projects-container">
+    <img src="img/easyjet.jpg" alt="EasyJet"/>
+    <div>
+      <h3>Page EasyJet</h3>
+      <h4>Projet de formation</h4>
+      <ul>
+        <li>Création d'une réplique simplifiée du site EasyJet</li>
+        <li>Utilisation de HTML et CSS pour l'intégration d'une page responsive</li>
+        <li>Application des compétences d'intégration web pour structurer et styliser la page</li>
+      </ul>
+      <p class="project-link">Découvrez le projet : <a href="https://caroline-lte.github.io/EasyJet/" target="_blank">Ma page</a></p>
+    </div>
+  </div>
 
   <p>Au cours de ma formation Développement Web & Mobile, je réaliserai plusieurs répliques d'applications Web et d'applications Mobiles :</p>
 
@@ -120,20 +148,7 @@
       </div>
         </div>
 
-        <div class="projects-container">
-          <img src="img/appolo.jpg" alt="Astronomy Quiz"/>
-          <div>
-            <h3>Site d'Astronomie</h3>
-            <h4>Projet personnel</h4>
-            <ul>
-              <li>Création de quiz sur l'astronomie</li>
-              <li>Choix de questions sur différents niveaux de difficulté</li>
-              <li>Amélioration continue du projet avec l'ajout de nouvelles fonctionnalités</li>
-            </ul>
-            <p class="project-link">Découvrez le projet : <a href="https://caroline-lte.github.io/ma-page-astronomie/" target="_blank">Ma page</a></p>
-          </div>
-        </div>
-        
+
 
 
 <section id="contact">
